# llm-fine-tuning

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  streamlit_app.py  stub_models.py
curate/: README.md  __init__.py  prepare.py  validate.py
evals/: __init__.py  metrics.py  runner.py
notebooks/: train_colab.ipynb
tests/: test_app_smoke.py  test_metrics.py  test_validate.py
train/: __init__.py
