[project]
name = "llm-fine-tuning"
version = "0.1.0"
description = "Demo-oriented LLM fine-tuning and evaluation harness for natural-language to Vega-Lite chart-spec generation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=3.0",
    "jsonschema>=4.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "torch>=2.4",
    "transformers>=4.45",
]

[dependency-groups]
train = [
    "accelerate>=1.0",
    "bitsandbytes>=0.44",
    "peft>=0.13",
    "trl>=0.12",
]
demo = [
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
